# Playwright_scraper

./: .env_dummy  .gitignore  README.md  barchart_div.py  barchart_div_async.py  main.py  page_dump.html  pyproject.toml  simple_sync.py
