[project]
name = "playwright-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "keyring>=25.6.0",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.43",
]
